[package]
name = "sapper"
version = "0.1.5"
authors = ["Mike Tang <miketang84@outlook.com>"]
license = "MIT"
description = "A web framework designed for easy use."
readme = "README.md"
repository = "https://github.com/sappworks/sapper"
documentation = "https://docs.rs/sapper"
homepage = "https://github.com/sappworks/sapper"

[dependencies]
conduit-mime-types = "0.7"
lazy_static = "1"
may_http = { git = "https://github.com/rust-may/may_http.git" }
typemap = "0.3.3"
