[package]
name = "sapper"
version = "0.2.0"
authors = ["Mike Tang <daogangtang@gmail.com>"]
license = "MIT"
description = "A web framework designed for easy use."
readme = "README.md"
repository = "https://github.com/daogangtang/sapper"
documentation = "https://docs.rs/sapper"
homepage = "https://github.com/daogangtang/sapper"

[dependencies]
hyper = "0.10"
log = "0.3"
env_logger = "0.4"
typemap = "0.3"
conduit-mime-types = "0.7"
lazy_static = "0.2"

[workspace]
members = [
  "middlewares/sapper_query",
  "middlewares/sapper_body",
  "middlewares/sapper_session",
  "middlewares/sapper_tmpl",
  "middlewares/sapper_logger",
  "std",
  "examples/tiny",
]

