[package]
name = "sapper_std"
version = "0.2.0"
authors = ["Mike Tang <daogangtang@gmail.com>"]
license = "MIT"
description = "Wrappers for rapid coding for sapper web framework."
readme = "README.md"
repository = "https://github.com/daogangtang/sapper_std"
documentation = "https://docs.rs/sapper_std"
homepage = "https://github.com/daogangtang/sapper_std"
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
sapper = {path = "../", version = "0.2"}
sapper_query = {path = "../middlewares/sapper_query", version = "0.2"}
sapper_body = {path = "../middlewares/sapper_body", version = "0.2"}
sapper_session = {path = "../middlewares/sapper_session", version = "0.2"}
sapper_tmpl = {path = "../middlewares/sapper_tmpl", version = "0.2"}
sapper_logger = {path = "../middlewares/sapper_logger", version = "0.2"}

[features]
default = []
monitor = ["sapper_tmpl/monitor"]
