[package]
name = "sapper_logger"
version = "0.1.1"
authors = ["Mike Tang <miketang84@outlook.com>"]
license = "MIT"
description = "Basic logger module for sapper web framework."
readme = "README.md"
repository = "https://github.com/sappworks/sapper"
homepage = "https://github.com/sappworks/sapper"
documentation = "https://docs.rs/sapper_logger"

[dependencies]
sapper = {path = "../../"}
time = "0.1.37"
log = "0.3.7"

