[package]
name = "sapper_query"
version = "0.1.1"
authors = ["Mike Tang <miketang84@outlook.com>"]
license = "MIT"
description = "Query parsing module for sapper web framework."
readme = "README.md"
repository = "https://github.com/sappworks/sapper"
documentation = "https://docs.rs/sapper_query"
homepage = "https://github.com/sappworks/sapper"

[dependencies]
sapper = {path = "../../"}
url = "1.5"
