[package]
name = "sapper_body"
version = "0.2.0"
authors = ["Mike Tang <daogangtang@gmail.com>"]
license = "MIT"
description = "Body parsing module for sapper web framework."
readme = "README.md"
repository = "https://github.com/daogangtang/sapper"
documentation = "https://docs.rs/sapper_body"
homepage = "https://github.com/daogangtang/sapper"
edition = "2018"

[dependencies]
sapper = {path = "../../"}
url = "1.5"
serde = "1.0"
serde_json = "1.0"

