[package]
name = "sapper_query"
version = "0.2.0"
authors = ["Mike Tang <daogangtang@gmail.com>"]
license = "MIT"
description = "Query parsing module for sapper web framework."
readme = "README.md"
repository = "https://github.com/daogangtang/sapper"
documentation = "https://docs.rs/sapper_query"
homepage = "https://github.com/daogangtang/sapper"
edition = "2018"

[dependencies]
sapper = {path = "../../", version = "0.2"}
url = "1.5"
