[package]
name = "sapper_session"
version = "0.2.0"
authors = ["Mike Tang <daogangtang@gmail.com>"]
license = "MIT"
description = "Session plugin for sapper framework."
readme = "README.md"
repository = "https://github.com/daogangtang/sapper"
homepage = "https://github.com/daogangtang/sapper"
documentation = "https://docs.rs/sapper_session"
edition = "2018"

[dependencies]
sapper = {path = "../../", version = "0.2"}
cookie = "0.10"
time = "0.1"
