[package]
name = "sapper_tmpl"
version = "0.2.0"
authors = ["Mike Tang <daogangtang@gmail.com>"]
license = "MIT"
description = "Template module for sapper web framework."
readme = "README.md"
homepage = "https://github.com/daogangtang/sapper"
repository = "https://github.com/daogangtang/sapper"
documentation = "https://docs.rs/sapper_tmpl"
edition = "2018"

[dependencies]
lazy_static = "1.0"
tera = "0.11"
notify = { version = "^4.0.0", optional = true }

[features]
default = []
monitor = ["notify"]
